# sysrepair-bench

./: .gitignore  README.md  generate_scenarios.py  scenario-checklist.csv
.claude/: settings.json
SysRepair-Bench/ccdc/: README.md
ccdc/: README.md
ccdc/scenario-01/: Dockerfile  threat.md  verify.sh
ccdc/scenario-02/: Dockerfile
ccdc/scenario-03/: Dockerfile  verify.sh
ccdc/scenario-04/: Dockerfile  verify.sh
ccdc/scenario-05/: Dockerfile  threat.md  verify.sh
ccdc/scenario-06/: Dockerfile  threat.md  verify.sh
ccdc/scenario-07/: Dockerfile
ccdc/scenario-08/: Dockerfile  verify.sh
ccdc/scenario-09/: Dockerfile  verify.sh
ccdc/scenario-10/: Dockerfile  threat.md  verify.sh
ccdc/scenario-11/: Dockerfile  verify.sh
ccdc/scenario-12/: Dockerfile  verify.sh
ccdc/scenario-13/: Dockerfile  threat.md  verify.sh
ccdc/scenario-14/: Dockerfile  verify.sh
ccdc/scenario-15/: Dockerfile  threat.md  verify.sh
ccdc/scenario-16/: Dockerfile  verify.sh
ccdc/scenario-17/: Dockerfile  threat.md  verify.sh
ccdc/scenario-18/: Dockerfile  (+1 more)
hivestorm/: .gitattributes  README.md  prepare.ps1  prepare.sh
inspect_eval/: .env.example  README.md  baseline_report.json  pyproject.toml  runs.yaml  validate_baseline.py
inspect_eval/sysrepair_bench/: __init__.py  _docker_compat.py  rate_limiter.py  run.py  scorer.py  solvers.py  summarize.py  task.py
inspect_eval/tests/: test_rate_limiter.py  test_validate_baseline.py
meta2/: README.md  metasploitable2-docker-scenarios.md
meta3/: README.md
meta4/: .gitattributes  README.md
vulnhub/: README.md
(+1127 files in other folders)
